# prototypes

./: README.md  meson.build
src/: Application.vala  BiometricDialog.vala  ContentWarningDialog.vala  IndicatorDialog.vala  MainWindow.vala  MainWindow.vala~  UntrustedDialog.vala
src/Dialogs/: BiometricDialog.vala  ContentWarningDialog.vala  IndicatorDialog.vala  UntrustedDialog.vala
